--- a/stylesSide.css
+++ b/stylesSide.css
@@ -19,7 +19,7 @@ a {
   width: 300px;
   height: 100vh;
   background: rgba(255, 255, 255, 0.3);
-  transition: left 0.3s ease-in-out;
+  /* transition: left 0.3s ease-in-out; */
 }
 #side-nav.open {
   left: 0px;
